# pybind11_cuda_array_interface

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  pybind11_cuda_array_interfaceConfig.cmake.in  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yaml  linting.yaml
include/pybind11_cuda_array_interface/: pybind11_cuda_array_interface.h  pybind11_cuda_array_interface.hpp
linting/: check_python_linting.py  install_linters.py
tests/: CMakeLists.txt  install_cupy.py  test_install_cupy.py
tests/gtest/: cpGTest.cmake.in  getGTest.cmake.in
tests/pytest/: pybind11_cuda_array_interface_test.py
tests/sources/: gtest_pybind11_cuda_array_interface.cpp  pytest_pybind11_cuda_array_interface.cpp  test_kernels.cu  test_kernels.hpp  test_pybind11_cuda_array_interface.cpp
